--- a/etc/NEWS
+++ b/etc/NEWS
@@ -14,6 +14,10 @@ Author: T. V. Raman <tv.raman.tv@gmail.com>
 
 
 * Emacspeak 57 --- Emacspeak 57 User Visible Changes
+** Learn Smarter By Taking Rich, Hypertext Notes
+
+Integrates Audio Marks, E-Bookmarks and friends into  a note-taking
+workflow --- see [[https://emacspeak.blogspot.com/2022/10/learn-smarter-by-taking-rich-hypertext.html][blog article]].
 
 ** MPV
 
