--- a/etc/NEWS
+++ b/etc/NEWS
@@ -29,7 +29,7 @@ Use mpv for playing Youtube streams
 
 ** Emacs Repeat-Mode
 
-Emacspeak now leverages Emacs 28 feature ~repeat-mode~  for its media
+Emacspeak now leverages  feature ~repeat-mode~  for its media
 player commands.
 
 ** Speech-Enable Repeat-Mode
@@ -50,13 +50,14 @@ alternative to xbacklight.el
 
 ** Emacspeak Auditory Display Under Pulseaudio
 
-[[https://emacspeak.blogspot.com/2022/06/emacspeak-complete-audio-desktop-under.html][Emacspeak auditory display]] features work under Pulseaudio.
+[[https://emacspeak.blogspot.com/2022/06/emacspeak-complete-audio-desktop-under.html][Emacspeak auditory display]] features such as multiple TTS streams work
+under Pulseaudio.
 
 ** Emacspeak Speciality Browsers
 
 Interactive browsers for EWW Marks,AMarks,  Media History.
 
-* Org-Mode Enhancements
+** Org-Mode Enhancements
 
 Module ~emacspeak-org~ now integrates ~AMark~ support into org-mode;
 users can now enhance notes taken in org-mode with hyperlinks to
